--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Solitreo' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Love</title>
 </head>
 <body>
     <div class="container">
       <div class="envelope"></div>
       <div class="card">
-        <h1 class="message">Roses are red,<br>Violets are blue,<br>Unexpected '{'<br>on line 32.</h1>
+        <h1 class="message">Roses are red,<br>The sky is so blue,<br>Will you be my valentine.<br>and<br>Forever be true?</h1>
         <div class="heart"></div>
       </div>
       <div class="cover"></div>
