--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
     <title>Love</title>
 </head>
 <body>
-    <div class="container">
-      <div class="envelope"></div>
-      <div class="card">
-        <h1 class="message">Roses are red,<br>The sky is so blue,<br>Will you be my valentine<br>and forever be true?</h1>
-        <div class="heart"></div>
-      </div>
-      <div class="cover"></div>
-      <div class="lid"></div>
-      <div class="shadow"></div>
-    </div>
+    <div class="whole">
+            <div class="title">
+                <h1> Touch Here</h1>
+            </div>
+        <div class="container">   
+          <div class="envelope"></div>
+          <div class="card">
+            <h1 class="message">Roses are red,<br>Violets are blue,<br>Unexpected '{'<br>on line 32.</h1> 
+            <div class="heart"></div>        
+          </div>      
+          <div class="cover"></div>
+          <div class="lid"></div>
+          <div class="shadow"></div>
+          <div class="btn">
+            <button class="connect" onclick="document.location='https://drive.google.com/file/d/1kTVr2r5ogX5qPGX0ChWRUztYSeZN4nhV/view?usp=share_link'">Click Me!</button>
+          </div>  
+        </div>
+  </div>
 </body>
 </html>
