--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">   
           <div class="envelope"></div>
           <div class="card">
-            <h1 class="message">Roses are red,<br>Violets are blue,<br>Unexpected '{'<br>on line 32.</h1> 
+            <h1 class="message">Roses are red,<br>The sky is so blue,<br>Will you be my valentine<br>and forever be true?</h1>
             <div class="heart"></div>        
           </div>      
           <div class="cover"></div>
